syntax="proto3";

package collection_info;

option go_package="app/user/manifest/protobuf/collection_info/v1";

import "pbentity/collection_info.proto";

service collection_info{
  rpc Create(CollectionInfoCreateReq) returns (CollectionInfoCreateRes) {}
  rpc Delete(CollectionInfoDeleteReq) returns (CollectionInfoDeleteRes) {}
  rpc GetList(CollectionInfoGetListReq) returns (CollectionInfoGetListRes){}
}

//增（因为这个业务是需要登录鉴权的，所以可以不需要UserId，可以直接从登录的账号获取）
message CollectionInfoCreateReq{
  uint32  ObjectId =1; //对象id
  uint32 Type=2; //收藏类型：1商品 2文章
}

message CollectionInfoCreateRes {
  uint32 id = 1;
}


//删
message CollectionInfoDeleteReq{
  uint32 Id=1;
}

message CollectionInfoDeleteRes {
  uint32 id=1;
}


//查
message CollectionInfoGetListReq{
  uint32 type=1;
  uint32 page=2;
  uint32 size=3;  //字段编号必须从1开始递增
}

message CollectionInfoGetListRes {
  CollectionInfoListResponse data = 1;
}

message CollectionInfoListResponse {
  repeated pbentity.CollectionInfo list = 1;  //收藏信息列表
  uint32 page = 2;  //当前页码
  uint32 size = 3;  //每页大小
  uint32 total = 4; //总记录数
}










